--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "homepage": "https://github.com/Andres-UA/workshop-api-testing-js#readme",
   "devDependencies": {
     "chai": "^4.2.0",
+    "http-status-codes": "^1.3.2",
     "mocha": "^6.2.0"
+  },
+  "dependencies": {
+    "superagent": "^5.1.0",
+    "superagent-promise": "^1.1.0"
   }
 }
