--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,7 @@ typings/
 # Ignore all local history of files
 .history
 
+## Reports ##
+report
+
 # End of https://www.gitignore.io/api/node,linux,visualstudiocode,archlinuxpackages
