--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -t 5000"
+    "test": "mocha -t 5000 --reporter mochawesome --reporter-options reportDir=report,reportFilename=ApiTesting"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "http-status-codes": "^1.3.2",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "mochawesome": "^4.1.0"
   },
   "dependencies": {
     "superagent": "^5.1.0",
